--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -6,4 +6,5 @@
 {% endfor %}
 </ul>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+<a href="{% url 'polls:detail' question.id %}">Cast another vote</a><br><br>
+<a href="{% url 'polls:index' %}">Home</a>
